[package]
name = "iglesia_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
# Nuevas herramientas para el servidor web:
axum = "0.7"
tokio = { version = "1.0", features = ["full"] } # Permite que Rust maneje conexiones web
serde = { version = "1.0", features = ["derive"] } # Traduce JSON a código Rust
